--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.20.2
 
     - name: Test
-      run: go test -v ./... -coverprofile=coverage.txt -covermode=atomic
+      run: go test -race -v ./... -coverprofile=coverage.txt -covermode=atomic
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
